--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Instructors</h1>
+<h1>Text Your Instructor</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th>Number</th>
+     
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +15,10 @@
     <% @instructors.each do |instructor| %>
       <tr>
         <td><%= instructor.name %></td>
-        <td><%= instructor.number %></td>
-        <td><%= link_to 'Show', instructor %></td>
-        <td><%= link_to 'Edit', edit_instructor_path(instructor) %></td>
-        <td><%= link_to 'Destroy', instructor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        
+        <td><%= link_to 'Text', instructor %></td>
+        <td><% link_to 'Edit', edit_instructor_path(instructor) %></td>
+        <td><% link_to 'Destroy', instructor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Instructor', new_instructor_path %>
+<% link_to 'New Instructor', new_instructor_path %>
