--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -6,10 +6,7 @@
   <%= @instructor.name %>
 </p>
 
-<p>
-  <strong>Number:</strong>
-  <%= @instructor.number %>
-</p>
+
 
   <%= form_tag("/instructors/" + @instructor.id.to_s + "/text", method: "get") do %>
     <%= label_tag(:message, "message")%>
@@ -20,5 +17,5 @@
 <br>
 
 
-<%= link_to 'Edit', edit_instructor_path(@instructor) %> |
+<% link_to 'Edit', edit_instructor_path(@instructor) %> |
 <%= link_to 'Back', instructors_path %>
